# sf-gitlab-devops

./: .clang-format  .gitignore  .gitlab-ci-inc.yml  .gitlab-ci.yml  .gitmodules  CDashPipeline.cmake  CMakeLists.txt  CMakePresets.json  CMakePresets.md  CTestConfig.cmake  README.md  build.ps1  build.sh  check-format.sh  docker-build.sh  github-clone.sh  init-repo.sh  tools.sh  version-bump.sh  vm-ubuntu-server.sh  wine-exec.sh
.gitlab/: GITLAB-CI.md  README.md  build-single.gitlab-ci.yml  build-steps.gitlab-ci.yml  cache-test.gitlab-ci.yml  cmake-build.gitlab-ci.yml  common-c++.gitlab-ci.yml  coverage.gitlab-ci.yml  gnu-c++.gitlab-ci.yml  gnu-main.gitlab-ci.yml  gw-c++.gitlab-ci.yml  gw-main.gitlab-ci.yml  lnx-amd64.gitlab-ci.yml  lnx-arm64.gitlab-ci.yml  main.gitlab-ci.yml  shell-c++.gitlab-ci.yml  test.gitlab-ci.yml  tpl.gitlab-ci.yml
.gitlab/lnx/: jobs.gitlab-ci.yml  tpl.gitlab-ci.yml  var-amd64.gitlab-ci.yml  var-arm64.gitlab-ci.yml
.gitlab/lnx/gnu/: jobs.gitlab-ci.yml  tpl.gitlab-ci.yml
.gitlab/lnx/gw/: jobs.gitlab-ci.yml  tpl.gitlab-ci.yml
.gitlab/win/: jobs.gitlab-ci.yml  tpl.gitlab-ci.yml  var-amd64.gitlab-ci.yml
.gitlab/win/mingw/: jobs.gitlab-ci.yml  tpl.gitlab-ci.yml
.gitlab/win/msvc/: jobs.gitlab-ci.yml  tpl.gitlab-ci.yml
.gitlab/win/msvs/: jobs.gitlab-ci.yml  tpl.gitlab-ci.yml
app/: CMakeLists.txt  main.cpp  template.h
app/tests/: CMakeLists.txt  test-strings.cpp
binwin/: __output__
cmake/: PokyToolChainConfig.cmake  PokyToolChainConfigVersion.cmake  PokyToolChainV2.cmake  PokyToolChainV3.cmake  SfBaseConfig.cmake  SfBuildCheckConfig.cmake  SfCatch2Config.cmake  SfCompilerConfig.cmake  SfDoxyGenConfig.cmake  SfMacrosConfig.cmake  SfToolChainConfig.cmake  SingleInstanceConfig.cmake
cmake/cpack/: CPackConfig-ARCHIVE.cmake  CPackConfig-DEBIAN.cmake  CPackConfig-NSIS.cmake  CPackConfig-RPM.cmake  CPackConfig.cmake
cmake/tpl/doxygen/: custom.css  doxyfile.conf
cmake/tpl/doxygen/theme/dark/: html_header.html
cmake/tpl/doxygen/theme/zen/: README.md  header.html
cmake/tpl/dpkg/: debian-control.tpl
cmake/tpl/res/: version.rc
com/cmake/: Build.sh  LinuxCompiler.sh  SfBuildCheckConfig.cmake  SfCompilerConfig.cmake  SfMacrosConfig.cmake  SfToolChainConfig.cmake  SfToolChainCrossWindows.cmake  SfToolChainLinux.cmake
cpack/: CPackConfig-DEBIAN.cmake  CPackConfig-NSIS.cmake  CPackConfig-RPM.cmake  CPackConfig.cmake  CPackDebian.cmake  CPackRpm.cmake
doc/: CMakeLists.txt  branches-jobs-runners.puml  ci-pipeline.puml  mainpage.md  svg-images.odg
lib/: .gitkeep
manual/: CMakeLists.txt  branches-jobs-runners.puml  mainpage.md  svg-images.odg
package/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/hwl/: CMakeLists.txt
src/hwl/inc/hwl/: global.h  hello.h  target.h
src/hwl/src/: hello.cpp
src/qt/: CMakeLists.txt  main.cpp
src/tests/: CMakeLists.txt  main.cpp  test-hello.cpp  test-json.cpp  test-strings.cpp
src/tests/catch/: CMakeLists.txt  main.cpp  test-json.cpp  test-strings.cpp
src/tests/google/: CMakeLists.txt  main.cpp  test-hello.cpp
